# RMextract

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  INSTALL  MANIFEST.in  README.md  getIONEX.py  pyproject.toml  setup.py
.github/workflows/: pypi.yml
EMM/: EMM.py  EMM.py~  EMM2000.COF  EMM2002SV.COF  EMM2004.COF  EMM2005.COF  EMM2006.COF  EMM2008.COF  EMM2008SV.COF  EMM_Model.h  EMM_Model.i  EMM_Model_wrap.cc  GeomagnetismHeader.h  GeomagnetismLibrary.c  setup
RMextract/: PosTools.py  URL_download.py  formatters.py  getEarthMagnetic.py  getIONEX.py  getRM.py  getRM.py~  getTEC.py  logging.py  setup.py~
RMextract/EMM/: EMM.py  EMM2000SV.COF  EMM2001.COF  EMM2001SV.COF  EMM2002.COF  EMM2005SV.COF  EMM2006.COF  EMM2006SV.COF  EMM2007.COF  EMM2007SV.COF  EMM2008.COF  EMM2009.COF  EMM2010SV.COF  EMM_Model.cc  EMM_Model.h  EMM_Model.py  EMM_Model_wrap.cc  GeomagnetismHeader.h  GeomagnetismLibrary.c
RMextract/LOFAR_TOOLS/: createRMParmdb  createRMParmdb.py  createRMh5parm.py  download_IONEX.py
RMextract/RMextract.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
RMextract/pyiri/: 00_iri2016.tar  00readme.txt  cira.for  fort.7  igrf.for  iri.pyf  iridreg.for  irifun.for  iriget.for  irisub.for  iritec.for  iritest.for  notes_install.txt  pyiri.py
RMextract/pyiriplas/: Iris2017.for  Iris2020.for  igrf-13.for  igrf.for  indx2017.for  indx2020.for  install_notes.txt  irif2019.for  irif2020.for  iriplas.pyf  iriplas_main.for  kp1947  kp1948  kp1949  kp1950  kp1951  kp1952  kp1953  kp1954  kp1955  kp1956  kp1957  kp1958  kp1959  kp1960  kp1961  kp1962  kp1963  kp1964  kp1966  kp1967  kp1969  kp1972  kp1979  kp1980  kp1982  kp1983  kp1984  kp1985  kp1987  (+29 more)
doc/: Usage.tex
examples/: Albus_Coordinates.py  agw_examples.py  example.parset  example_getRM.py  example_getRM_write_to_file.py  example_get_Bfield.py  example_get_RM_3C196.py  example_get_tec.py  getB_raytrace.py  get_RM_iri.py  test_report.py
manylinux2014/: build.sh  wheel36.docker  wheel37.docker  wheel38.docker  wheel39.docker
pyiri/: igrf.for  igsg3410.12i  iri-f2pywrappers.f  iri.pyf  iriflip.for  irifun.for  iriget.for  irimodule.c  irisub.for  iritest.for  pyiri.py
pyiriplas/: Iris2017.for  Iris2017.for~  install_notes.txt  install_notes.txt~  iriplas.pyf~  iriplas_main.for  iriplas_main.for~  kp1949  kp1950  kp1956  kp1958  kp1959  kp1960  kp1961  kp1962  kp1963  kp1965  kp1968  kp1970  kp1971  kp1973  kp1974  kp1975  kp1976  kp1977  kp1978  kp1981  kp1983  kp1986  kp1988  kp1989  kp1991  kp1992  kp1993  kp1999  kp2000  kp2001  kp2002  kp2004  kp2006  (+7 more)
tests/: test_formatters.py
